# ImageStitcher

./: .gitignore  README.md
.trae/documents/: fill-color-feature-plan.md  github-multi-project-upload-plan.md  smart-import-and-check.md  trim-white-borders-plan.md  ui-adjust-and-name-completion-plan.md  win7-migration-audit-plan.md
.trae/specs/add-stretch-align-mode/: checklist.md  spec.md  tasks.md
.trae/specs/add-xml-toggle-backup-build/: checklist.md  spec.md  tasks.md
.trae/specs/implement-image-stitcher/: checklist.md  spec.md  tasks.md
src/: CMakeLists.txt  CheckResultDialog.cpp  CheckResultDialog.h  FileManager.cpp  FileManager.h  MainWindow.cpp  MainWindow.h  NumberUtil.cpp  NumberUtil.h  PathResolver.cpp  PathResolver.h  Stitcher.cpp  Stitcher.h  XmlChecker.cpp  XmlChecker.h  XmlEditor.cpp  XmlEditor.h  main.cpp
